[gd_scene load_steps=19 format=3 uid="uid://col1t1hfqhsir"]

[ext_resource type="Script" path="res://scenes/goblin.gd" id="1_677uf"]
[ext_resource type="Script" path="res://scripts/goblin.gd" id="1_ntdl4"]
[ext_resource type="Texture2D" uid="uid://c1lp3y3u073lo" path="res://art/goblin/goblin_attack.png" id="2_xj7im"]
[ext_resource type="Texture2D" uid="uid://14au3c0xpcad" path="res://art/goblin/goblin_idle.png" id="3_0ubom"]
[ext_resource type="Texture2D" uid="uid://ba3j1dxis056t" path="res://art/goblin/goblin_walk.png" id="4_8efna"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ixbk"]
atlas = ExtResource("2_xj7im")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyjkj"]
atlas = ExtResource("2_xj7im")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyst7"]
atlas = ExtResource("2_xj7im")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qm87"]
atlas = ExtResource("2_xj7im")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_55unn"]
atlas = ExtResource("3_0ubom")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jnxo"]
atlas = ExtResource("3_0ubom")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bmta"]
atlas = ExtResource("3_0ubom")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y08wu"]
atlas = ExtResource("4_8efna")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybhhl"]
atlas = ExtResource("4_8efna")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxb4v"]
atlas = ExtResource("4_8efna")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0lit"]
atlas = ExtResource("4_8efna")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_eoc3b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ixbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyjkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyst7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qm87")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_55unn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jnxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bmta")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y08wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybhhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxb4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0lit")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frfb6"]
size = Vector2(22, 22)

[node name="PathFollow2D" type="PathFollow2D"]
rotates = false
loop = false
script = ExtResource("1_677uf")

[node name="goblin" type="CharacterBody2D" parent="."]
y_sort_enabled = true
position = Vector2(1, -2)
script = ExtResource("1_ntdl4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="goblin"]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_eoc3b")
animation = &"attack"
frame_progress = 0.48353

[node name="CollisionShape2D" type="CollisionShape2D" parent="goblin"]
position = Vector2(-5, 22)
shape = SubResource("RectangleShape2D_frfb6")

[node name="vision_patrol" type="Area2D" parent="goblin"]
position = Vector2(15, 15)
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="goblin/vision_patrol"]
position = Vector2(-25, -13)
polygon = PackedVector2Array(7, 18, 6, -4, 203, -66, 207, 79)

[node name="RayCast2D" type="RayCast2D" parent="goblin"]
position = Vector2(-3, 8)
target_position = Vector2(8, 1)
collision_mask = 8

[node name="Line2D" type="Line2D" parent="goblin"]

[node name="vision_indicator" type="Polygon2D" parent="goblin"]
position = Vector2(7, 4)

[connection signal="body_entered" from="goblin/vision_patrol" to="goblin" method="_on_vision_body_entered"]
[connection signal="body_exited" from="goblin/vision_patrol" to="goblin" method="_on_vision_body_exited"]
